; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_pgtz.c_init_timezone_hashtable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_pgtz.c_init_timezone_hashtable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@TZ_STRLEN_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [10 x i8] c"Timezones\00", align 1
@HASH_ELEM = common dso_local global i32 0, align 4
@timezone_cache = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @init_timezone_hashtable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_timezone_hashtable() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__, align 8
  %3 = call i32 @MemSet(%struct.TYPE_4__* %2, i32 0, i32 16)
  %4 = load i64, i64* @TZ_STRLEN_MAX, align 8
  %5 = add nsw i64 %4, 1
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  store i64 %5, i64* %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 4, i32* %7, align 8
  %8 = load i32, i32* @HASH_ELEM, align 4
  %9 = call i32 @hash_create(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 4, %struct.TYPE_4__* %2, i32 %8)
  store i32 %9, i32* @timezone_cache, align 4
  %10 = load i32, i32* @timezone_cache, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %14

13:                                               ; preds = %0
  store i32 1, i32* %1, align 4
  br label %14

14:                                               ; preds = %13, %12
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @MemSet(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @hash_create(i8*, i32, %struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
